--- a/client/client01.css
+++ b/client/client01.css
@@ -61,6 +61,10 @@ body {
     color: #fff;
 }
 
+.contents {
+    display: flex;
+}
+
 
 .contents .photo {
     width: 550px;
@@ -71,4 +75,33 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.contents .texts {
+    width: 660px;
+    background-color: #eee;
+    padding: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contents .texts h3 {
+    font-size: 28px;
+    margin-bottom: 18px;
+}
+
+.contents .texts p.words {
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+
+.contents .texts p.username {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+.contents .texts p.job {
+    font-size: 20px;
 }
