--- a/client/client01.css
+++ b/client/client01.css
@@ -75,6 +75,8 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
 }
 
 .contents .texts {
@@ -84,6 +86,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 .contents .texts h3 {
